Add permissions to inherited workflows

--- a/.github/workflows/track_new_issues.yml
+++ b/.github/workflows/track_new_issues.yml
@@ -1,4 +1,9 @@
 name: Add issue to project
+
+# Job doesn't use the default GITHUB_TOKEN
+permissions:
+  contents: read
+
 on:
   issues:
     types:
